...
            Inbox(state,collection,collectionChanged,selected,select,open,read)
        }
        if (collapsed) Column(Modifier.fillMaxWidth().padding(bottom = 12.dp), horizontalAlignment = Alignment.CenterHorizontally) {
            NavigationIcon("chat_bubble","Messages",section == "inbox"){navigate("inbox")}
            if (LocalClientFeatures.current.calls) NavigationIcon("call","Calls",section == "calls"){navigate("calls")}
            NavigationIcon("description","Notes",section == "notes"){navigate("notes")}
            NavigationIcon("settings","Settings",section == "settings"){navigate("settings")}
        } else Row(Modifier.fillMaxWidth().padding(vertical=12.dp),horizontalArrangement=Arrangement.SpaceEvenly) {
            NavigationIcon("chat_bubble","Messages",section == "inbox"){navigate("inbox")}
            if (LocalClientFeatures.current.calls) NavigationIcon("call","Calls",section == "calls"){navigate("calls")}
            NavigationIcon("description","Notes",section == "notes"){navigate("notes")}
            NavigationIcon("settings","Settings",section == "settings"){navigate("settings")}
        }
...
